fix: Correct brand name to "Donde vamos"
Updates the application's brand name and associated text from "Donde Ivamos" to "Donde vamos" across various files including package.json, index.html, metadata.json, Gemini service prompts, Hero component, and App component. This ensures consistency in branding.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "donde-ivamos---north-&-south-america-explorer",
+  "name": "donde-vamos---north-&-south-america-explorer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
