feat: Update app to global scope
Refactors the application to expand its scope from specific regions to global coverage. Updates project name, metadata, region enum, and removes hardcoded regional data from the preferences form.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "donde-vamos---north-&-south-america-explorer",
+  "name": "donde-vamos---global-elite-explorer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
